fix: ci building

--- a/.github/workflows/uat.yaml
+++ b/.github/workflows/uat.yaml
@@ -19,7 +19,8 @@ jobs:
 
       - name: linter
         run: |
-          go vet .
+          # only vet on our packages
+          go list ./... | grep kanthor | go vet -v
 
       - name: test
         run: |
