--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -77,7 +77,7 @@ services:
     volumes:
       - ./docker/.kanthor:/root/.kanthor
     command:
-      - serve sdkapi
+      - kanthor serve sdkapi
 
   portalapi:
     depends_on:
@@ -99,7 +99,7 @@ services:
     volumes:
       - ./docker/.kanthor:/root/.kanthor
     command:
-      - serve portalapi
+      - kanthor serve portalapi
 
   scheduler:
     depends_on:
@@ -119,7 +119,7 @@ services:
     volumes:
       - ./docker/.kanthor:/root/.kanthor
     command:
-      - serve scheduler
+      - kanthor serve scheduler
 
   dispatcher:
     depends_on:
@@ -139,7 +139,7 @@ services:
     volumes:
       - ./docker/.kanthor:/root/.kanthor
     command:
-      - serve dispatcher
+      - kanthor serve dispatcher
 
   storage:
     depends_on:
@@ -157,7 +157,7 @@ services:
     volumes:
       - ./docker/.kanthor:/root/.kanthor
     command:
-      - serve storage
+      - kanthor serve storage
 
 networks:
   kanthor:
