feat: output of setup account

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -86,7 +86,7 @@ services:
         condition: service_healthy
       cache:
         condition: service_healthy
-      migrations:
+      migration-database:
         condition: service_started
     container_name: kanthor-services-sdkapi
     build: .
