--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -49,7 +49,7 @@ services:
       warehouse:
         condition: service_healthy
     container_name: kanthor-services-migration-database
-    build: .
+    image: kanthorlabs/kanthor:latest
     restart: on-failure
     networks:
       - kanthor
@@ -66,7 +66,7 @@ services:
       warehouse:
         condition: service_healthy
     container_name: kanthor-services-migration-datastore
-    build: .
+    image: kanthorlabs/kanthor:latest
     restart: on-failure
     networks:
       - kanthor
@@ -89,7 +89,7 @@ services:
       migration-database:
         condition: service_started
     container_name: kanthor-services-sdkapi
-    build: .
+    image: kanthorlabs/kanthor:latest
     restart: unless-stopped
     networks:
       - kanthor
@@ -113,7 +113,7 @@ services:
       migration-database:
         condition: service_started
     container_name: kanthor-services-portalapi
-    build: .
+    image: kanthorlabs/kanthor:latest
     restart: unless-stopped
     networks:
       - kanthor
@@ -137,7 +137,7 @@ services:
       migration-database:
         condition: service_started
     container_name: kanthor-services-scheduler
-    build: .
+    image: kanthorlabs/kanthor:latest
     restart: unless-stopped
     networks:
       - kanthor
@@ -159,7 +159,7 @@ services:
       migration-database:
         condition: service_started
     container_name: kanthor-services-dispatcher
-    build: .
+    image: kanthorlabs/kanthor:latest
     restart: unless-stopped
     networks:
       - kanthor
@@ -179,7 +179,7 @@ services:
       migration-datastore:
         condition: service_started
     container_name: kanthor-services-storage
-    build: .
+    image: kanthorlabs/kanthor:latest
     restart: unless-stopped
     networks:
       - kanthor
