--- a/.github/workflows/uat.yaml
+++ b/.github/workflows/uat.yaml
@@ -63,7 +63,7 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - id: prebuild base image
+      - name: prebuild base image
         run: docker build --platform linux/amd64 --progress=plain -t kanthorlabs/base:latest docker/base
 
       - uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
