--- a/docker/.kanthor/configs.yaml
+++ b/docker/.kanthor/configs.yaml
@@ -113,15 +113,13 @@ scheduler:
     connection: *streaming
   subscriber:
     connection: *streaming
-    type: pull
-    pull:
-      max_waiting: 100
-      max_ack_pending: 3000
-      max_ack_wating_duration: 15000
-      max_request_batch: 300
-    name: schedule_default_push
+    name: schedule
     filter_subject: kanthor.default.msg.>
-    max_deliver: 3
+    max_retry: 3
+    max_waiting: 100
+    max_ack_pending: 100000
+    max_ack_wating_duration: 15000
+    max_request_batch: 1000
   request:
     arrange:
       concurrency: 100
@@ -140,16 +138,13 @@ dispatcher:
     connection: *streaming
   subscriber:
     connection: *streaming
-    type: push
-    push:
-      deliver_subject: dispatch
-      deliver_group: default
-      max_request_batch: 4000
-      max_ack_wating_duration: 15000
-      temporary: true
-    name: dispatch_default_psuh
+    name: dispatcher
     filter_subject: kanthor.default.req.>
-    max_deliver: 3
+    max_retry: 3
+    max_waiting: 100
+    max_ack_pending: 100000
+    max_ack_wating_duration: 15000
+    max_request_batch: 1000
   sender:
     timeout: 3000
     retry:
@@ -176,15 +171,13 @@ dispatcher:
 storage:
   subscriber:
     connection: *streaming
-    type: pull
-    pull:
-      max_waiting: 100
-      max_ack_pending: 100000
-      max_ack_wating_duration: 15000
-      max_request_batch: 1000
-    name: storage_default_pull
+    name: storage
     filter_subject: kanthor.default.>
-    max_deliver: 3
+    max_waiting: 100
+    max_retry: 3
+    max_ack_pending: 100000
+    max_ack_wating_duration: 15000
+    max_request_batch: 1000
   metrics:
     engine: otel
     otel:
